[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-requirements-txt",
    "hatchling",
]

[project]
authors = [
    { name = "Mingzhe Zou", email = "zoumingzhe@outlook.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Form module"
dynamic = [
    "dependencies",
    "version",
]
keywords = []
name = "xkits-sheet"
requires-python = ">=3.8"

[project.license]
file = "LICENSE"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
Homepage = "https://github.com/bondbox/xsheet/"

[tool.hatch.build.targets.sdist]
exclude = [
    "xkits_sheet/unittest",
]
packages = [
    "xkits_sheet",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "xkits_sheet/unittest",
]
packages = [
    "xkits_sheet",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = [
    "requirements.txt",
]

[tool.hatch.version]
path = "xkits_sheet/attribute.py"
